cleanup, adding ui using intellij form designer (puke)