@@ -1,30 +1,28 @@
+//plugins {
+//    id 'ru.vyarus.use-python' version '3.0.0'
+//}
 apply plugin: 'application'
 apply plugin: 'java'
+/*
+//pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu116
+python {
+    extraIndexUrls "https://download.pytorch.org/whl/cu116"
+    pip 'transformers'
+    pip 'torch'
+    pip 'torchvision'
+    pip 'torchaudio'
+    pip 'petals'
+}
+ */
+
 compileJava {
-    options.fork = true
-    options.forkOptions.executable = "javac"
-    options.forkOptions.javaHome = file(System.getProperty("java.home"))
-    options.compilerArgs.addAll('-XDignore.symbol.file','--add-exports=java.base/jdk.internal=ALL-UNNAMED','--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED')
+//    options.fork = true
+//    options.forkOptions.executable = "javac"
+//    options.forkOptions.javaHome = file(System.getProperty("java.home"))
+//    options.compilerArgs.addAll('-XDignore.symbol.file','--add-exports=java.base/jdk.internal=ALL-UNNAMED','--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED')
     sourceCompatibility = '13'
     targetCompatibility = '13'
 }
-
-//apply plugin: 'java'
-
-//compileJava {
-//    options.compilerArgs.add('--add-opens=java.base/jdk.internal=ALL-UNNAMED')
-//}
-//compileJava {
-//    options.compilerArgs << '--add-opens java.base/jdk.internal.vm.annotation=ALL-UNNAMED --add-opens java.base/jdk.internal=ALL-UNNAMED'
-//}
-
-run {
-//    applicationDefaultJvmArgs =['--add-opens=java.base/jdk.internal.vm.annotation=santacoder','--add-opens=java.base/jdk.internal=santacoder']
-    jvmArgs =['-Djdk.attach.allowAttachSelf=true']
-//    args=['com.klemstinegroup.AiCoder']
-}
-
-
 
 repositories {
     mavenCentral()
@@ -36,17 +34,18 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
     implementation platform("ai.djl:bom:0.16.0")
     implementation "ai.djl:api"
-    implementation group: 'com.github.plexpt', name: 'chatgpt', version: '1.1.2'
     runtimeOnly "ai.djl.pytorch:pytorch-engine"
     runtimeOnly "ai.djl.pytorch:pytorch-model-zoo"
     implementation group: 'org.javassist', name: 'javassist', version: '3.29.2-GA'
-//    implementation files("${System.getProperty('java.home')}/../lib/rt.jar")
-//    implementation group: 'com.nqzero', name: 'permit-reflect', version: '0.4'
+    implementation group: 'com.intellij', name: 'forms_rt', version: '6.0.5'
 }
 
 application {
-//    mainClass = 'com.nqzero.permit.Permit'
     mainClass = 'com.klemstinegroup.AiCoder'
+}
+
+run {
+    jvmArgs =['-Djdk.attach.allowAttachSelf=true']
 }
 
 sourceSets {
